Nueva version en la rama

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi blog</h1>
-    <p>Hola, yo soy Sebastian un tipo comun y corriente</p>
+    <div class="cabecera">
+        <h1>Bienvenidos a mi blog</h1>
+        <p>Hola, yo soy Sebastian un tipo comun y corriente</p>
+        <h3>Esta es la modificacion de la cabecera</h3>
+    </div>
 </body>
 </html>
