Clase Cabecera hecha

--- a/blog.html
+++ b/blog.html
@@ -11,5 +11,6 @@
         <p>Hola, yo soy Sebastian un tipo comun y corriente</p>
         <h3>Esta es la modificacion de la cabecera</h3>
     </div>
+    <div class="cabecera"> <p>Do you know Willy?</p> </div>
 </body>
 </html>
