Mas parrafos al blog

--- a/blog.html
+++ b/blog.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Bienvenidos a mi blog</h1>
     <p>Hola, yo soy Sebastian un tipo comun y corriente</p>
+    <p>Disenador de paginas web y Desarrollador de Videojuegos tales 
+        como niuno
+    </p>
 </body>
 </html>
