--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="cabecera">
-        <h1>Bienvenidos a mi blog</h1>
+        <h1>Bienvenidos a mi blog 2.2</h1>
         <p>Hola, yo soy Sebastian un tipo comun y corriente</p>
         <h3>Esta es la modificacion de la cabecera</h3>
     </div>
